# Grid-Processor-Hypercomputation-Superturing-Processor

./: build_manifest.json  info.yaml
constraints/: grid_oracle.sdc  pin_order.cfg
docs/: Guia_Ejecucion.md
firmware/: CMakeLists.txt  rp2040_grid_oracle.c
gds/: README.md
openlane/: config.json
pcb/: carrier_board.kicad_sch
scripts/: build_grid_sky130.py  generate_gds.sh  verify_grid_design.py
src/: adc_interface.sv  bridge_quantizer.sv  clock_divider.sv  config.json  grid_cell.sv  grid_cell_array.v  grid_processor_core.sv  output_mux.sv  reset_synchronizer.sv  sfr_interface.sv  tb_grid_oracle.sv  tt_um_grid_oracle.sv
